# quickstart-streaming-agents

./: .gitignore  LAB1-Walkthrough.md  LAB2-Walkthrough.md  README.md  deploy.py  install-dependencies.sh  pyproject.toml  requirements.txt  service.yml  setup.py  terraform.tfvars
LAB1-Tool-Calling/: LAB1.md
assets/lab2/flink_docs/: chunk_documents.py
assets/lab2/flink_docs/markdown_chunks/: flink_concepts_autopilot_chunk_1.md  flink_concepts_batch-and-stream-processing_chunk_1.md  flink_concepts_batch-and-stream-processing_chunk_2.md  flink_concepts_cmf_chunk_1.md  flink_concepts_comparison-with-apache-flink_chunk_1.md  flink_concepts_comparison-with-apache-flink_chunk_2.md  flink_concepts_compute-pools_chunk_1.md  flink_concepts_delivery-guarantees_chunk_1.md  flink_concepts_determinism_chunk_1.md  flink_concepts_determinism_chunk_2.md  flink_concepts_determinism_chunk_3.md  flink_concepts_dynamic-tables_chunk_1.md  flink_concepts_dynamic-tables_chunk_2.md  flink_concepts_flink-billing_chunk_1.md  flink_concepts_flink-billing_chunk_2.md  flink_concepts_flink-private-networking_chunk_1.md  flink_concepts_flink-private-networking_chunk_2.md  flink_concepts_flink-private-networking_chunk_3.md  flink_concepts_flink_chunk_1.md  flink_concepts_flink_chunk_2.md  flink_concepts_flink_chunk_3.md  flink_concepts_overview_1_chunk_1.md  flink_concepts_overview_chunk_1.md  flink_concepts_overview_chunk_2.md  flink_concepts_overview_chunk_3.md  flink_concepts_overview_chunk_4.md  flink_concepts_schema-statement-evolution_chunk_1.md  flink_concepts_schema-statement-evolution_chunk_2.md  flink_concepts_schema-statement-evolution_chunk_3.md  flink_concepts_schema-statement-evolution_chunk_4.md  flink_concepts_snapshot-queries_chunk_1.md  flink_concepts_snapshot-queries_chunk_2.md  flink_concepts_statement-cfu-metrics_chunk_1.md  flink_concepts_statements_chunk_1.md  flink_concepts_statements_chunk_2.md  flink_concepts_statements_chunk_3.md  flink_concepts_timely-stream-processing_chunk_1.md  flink_concepts_timely-stream-processing_chunk_2.md  flink_concepts_timely-stream-processing_chunk_3.md  flink_concepts_timely-stream-processing_chunk_4.md  (+345 more)
aws/core/: main.tf  outputs.tf  variables.tf  versions.tf
aws/core/modules/aws/: aws.tf
aws/core/modules/aws-ai/: main.tf  outputs.tf  variables.tf  versions.tf
aws/lab1-tool-calling/: main.tf  outputs.tf  providers.tf  variables.tf
aws/lab1-tool-calling/data-gen/: run.bat
aws/lab1-tool-calling/data-gen/generators/: customers.json  orders.json  products.json
aws/lab2-vector-search/: main.tf  outputs.tf  providers.tf  variables.tf
azure/core/: main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
azure/core/modules/azure/: azure.tf
azure/core/modules/azure-ai/: main.tf  outputs.tf  variables.tf  versions.tf
azure/lab1-tool-calling/: main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
azure/lab1-tool-calling/data-gen/: root.json  run.sh
azure/lab1-tool-calling/data-gen/generators/: orders.json  products.json
azure/lab2-vector-search/: main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
scripts/: __init__.py  lab1_datagen.py  lab1_mcp_setup.py  lab2_publish_docs.py  lab2_publish_queries.py
scripts/common/: __init__.py  cloud_detection.py  terraform.py
terraform/: confluent.tf  llm.tf  outputs.tf  providers-aws.tf.disabled  providers-azure.tf.disabled  terraform.tfvars  variables.tf
terraform/data-gen/: license.env  root.json  run.sh
terraform/data-gen/generators/: customers.json  orders.json  products.json
terraform/modules/aws/: aws.tf
terraform/modules/azure/: azure.tf
